application/cinema-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinema-catalog
  template:
    metadata:
      labels:
        app: cinema-catalog
    spec:
      containers:
        - image: x1sty/cinema-catalog:latest
          name: cinema-catalog
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: certificates
              mountPath: /home/nupp/app/src/config/ssl/server.crt
              subPath: server.crt
            - name: certificates
              mountPath: /home/nupp/app/src/config/ssl/server.key
              subPath: server.key
      volumes:
        - name: certificates
          configMap:
            name: certs-cinema-catalog
            items:
            - key: server.crt
              path: server.crt
            - key: server.key
              path: server.key
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cinema-catalog
spec:
  ports:
    - name: cinema-catalog
      port: 3000
      targetPort: 3000
  selector:
    app: cinema-catalog
