application/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 1
  serviceName: mongodb
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:3.4.2
          name: mongodb
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
