application/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: cinema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - image: x1sty/payment:latest
          name: payment
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: certificates
              mountPath: /home/nupp/app/src/config/ssl/server.crt
              subPath: server.crt
            - name: certificates
              mountPath: /home/nupp/app/src/config/ssl/server.key
              subPath: server.key
      volumes:
        - name: certificates
          configMap:
            name: certs-payment
            items:
            - key: server.crt
              path: server.crt
            - key: server.key
              path: server.key
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: cinema
spec:
  ports:
    - name: payment
      port: 3000
      targetPort: 3000
  selector:
    app: payment
