application/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema
spec:
  ingressClassName: nginx
  rules:
  - host: cinema.id
    http:
      paths:
      - pathType: Prefix
        path: '/cinemas'
        backend:
          service:
            name: cinema-catalog
            port:
              number: 3000
      - pathType: Prefix
        path: '/movies'
        backend:
          service:
            name: movies
            port:
              number: 3000
      - pathType: Prefix
        path: '/booking'
        backend:
          service:
            name: booking
            port:
              number: 3000
      - pathType: Prefix
        path: '/notification'
        backend:
          service:
            name: notification
            port:
              number: 3000
      - pathType: Prefix
        path: '/payment'
        backend:
          service:
            name: payment
            port:
              number: 3000
